services/kubernetes/rune-staging/rune-rpc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rune-rpc
  namespace: default
  annotations:
    kubernetes.io/ingress.global-static-ip-name: rune-staging-rpc-external-ip
    ingress.gcp.kubernetes.io/pre-shared-cert: rune-staging-rpc-ssl-certificate
spec:
  defaultBackend:
    service:
      name: rune-rpc
      port:
        number: 8545

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rune-rpc-ws
  namespace: default
  annotations:
    kubernetes.io/ingress.global-static-ip-name: rune-staging-rpc-ws-external-ip
    ingress.gcp.kubernetes.io/pre-shared-cert: rune-staging-rpc-ws-ssl-certificate
spec:
  defaultBackend:
    service:
      name: rune-rpc
      port:
        number: 8546

---
apiVersion: v1
kind: Service
metadata:
  name: rune-rpc
  namespace: default
  annotations:
    cloud.google.com/backend-config: '{"ports": {
      "json-rpc": "rune-rpc-backend-config",
      "json-rpc-ws": "rune-rpc-ws-backend-config"
    }}'
  labels:
    app: rune
    type: rpc
spec:
  type: ClusterIP
  ports:
    - name: json-rpc
      port: 8545
      targetPort: json-rpc
    - name: json-rpc-ws
      port: 8546
      targetPort: json-rpc-ws
  selector:
    app: rune
    type: node
